# grader

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
grader/db/: db.py
grader/db/tools/: session.py
grader/services/model_service/: main.py
grader/services/model_service/controller/: modelController.py
grader/src/: annotations.py  dataloader.py  dataset.yaml  model.py
grader_app/: app.json  package-lock.json  package.json
grader_app/app/(tabs)/: _layout.tsx  record.tsx
grader_db/: go.mod  go.sum
grader_db/internal/db/: climb.go  climb_hold_xref.go  grades.go  hold.go  image.go
grader_flutter/grader/: README.md  pubspec.yaml
grader_flutter/grader/android/app/: build.gradle.kts
grader_flutter/grader/ios/Runner/: Info.plist
grader_flutter/grader/ios/Runner.xcodeproj/: project.pbxproj
grader_flutter/grader/linux/: CMakeLists.txt
grader_flutter/grader/linux/runner/: my_application.cc
grader_flutter/grader/macos/Runner.xcodeproj/: project.pbxproj
grader_flutter/grader/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
grader_flutter/grader/macos/Runner/Configs/: AppInfo.xcconfig
grader_flutter/grader/web/: index.html
grader_flutter/grader/windows/: CMakeLists.txt
grader_flutter/grader/windows/runner/: Runner.rc  main.cpp
