[project]
name = "grader"
version = "0.1.0"
description = ""
authors = [
    {name = "Rory Lange",email = "rorystrattonlange@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kagglehub (>=0.3.13,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
downloadtest = "grader.src.dataloader:downloadClimbingHolds"
