[project]
name = "grader"
version = "0.1.0"
description = ""
authors = [
    {name = "Rory Lange",email = "rorystrattonlange@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kagglehub (>=0.3.13,<0.4.0)",
    "ultralytics (>=8.3.230,<9.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
downloadtest = "grader.src.dataloader:downloadClimbingHolds"
trainlocal = "grader.src.model:train"
annotatetest = "grader.src.annotations:annotate1"
holdstest = "grader.src.model:testOnHolds"
persontest = "grader.src.model:testOnPerson"